--- a/MVC_Operations/appsettings.json
+++ b/MVC_Operations/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MVC_OperationsContext": "Server=(localdb)\\mssqllocaldb;Database=MVC_OperationsContext-3386f4f7-ce46-4333-969d-02a5e89b60ab;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
