Adding User scalfold (CRUD).

--- a/MVC_Operations/appsettings.json
+++ b/MVC_Operations/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MVC_OperationsContext": "Server=(localdb)\\mssqllocaldb;Database=MVC_OperationsContext-3386f4f7-ce46-4333-969d-02a5e89b60ab;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MVC_OperationsContext": "Data Source=LAPTOP-OPH5U10J\\SQLEXPRESS;Initial Catalog=MVC_Operacoes;Persist Security Info=True;User ID=sa;Password=sa;Encrypt=True;Trust Server Certificate=True"
   }
 }
